--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,7 @@ set(SOURCE_FILES
 	src/world.cpp
 	src/shark.cpp
 	src/puffer.cpp
+	src/whale.cpp
 
     src/project_path.hpp
 	src/common.hpp
@@ -50,6 +51,7 @@ set(SOURCE_FILES
 	src/world.hpp
 	src/shark.hpp
 	src/puffer.hpp
+	src/whale.hpp
 	)
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
